# AI_Edge-

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.arm64  Dockerfile.modelprep  README.md  benchmark_sim.py  pyproject.toml  requirements-pi.txt  requirements.txt  test_matrix.py
benchmark_results/: benchmark.jsonl  benchmark_barge.jsonl
benchmarks/: bench_pipeline.py  benchmark_pipeline.py
config/: benchmark_scenarios.json  pi5_audio_alsa.env
configs/: pipeline.rpi.toml  pipeline.sim.toml
docker/: Dockerfile.pi-sim  Dockerfile.pi5  compose.pi-sim.yml  compose.yml
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  DEPLOYMENT_PLAN.md  PI_NATIVE_PIPELINE.md  RASPBERRY_PI_DEPLOYMENT.md  raspi5_emulation_plan.md
edge_assistant/: __init__.py  asr.py  audio_source.py  config.py  main.py  metrics.py  pipeline.py  ring_buffer.py  tts.py  vad.py
results/: benchmark_q5_t2.csv  benchmark_sim.csv  matrix_FP16_t1.csv  matrix_FP16_t2.csv  matrix_FP16_t3.csv  matrix_FP16_t4.csv  matrix_Q4_t1.csv  matrix_Q4_t2.csv  matrix_Q4_t3.csv  matrix_Q4_t4.csv  matrix_Q5_t1.csv  matrix_Q5_t2.csv  matrix_Q5_t3.csv  matrix_Q5_t4.csv  matrix_Q8_t1.csv  matrix_Q8_t2.csv  matrix_Q8_t3.csv  matrix_Q8_t4.csv  matrix_summary.csv
scripts/: build_arm64_image.ps1  build_arm64_image.sh  build_modelprep_image.ps1  build_whisper_cpp.sh  docker_build.ps1  docker_build.sh  docker_run.ps1  docker_run.sh  docker_run_benchmark.sh  download_models.ps1  download_models.sh  pi_build_run.sh  pi_setup.sh  prepare_whisper_models.py  quantize_whisper_tiny.ps1  quantize_whisper_tiny.sh  rpi_install_native.sh  (+7 more)
(+20 files in other folders)
